--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-native": "^0.64.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
@@ -24,6 +25,7 @@
     "redux-saga": "^1.1.3",
     "yarn": "^1.22.10"
   },
+  "rnpm": { "assets": [ "./src/npmassets/fonts" ] },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
