--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "redux-saga": "^1.1.3",
     "yarn": "^1.22.10"
   },
-  "rnpm": { "assets": [ "./src/npmassets/fonts" ] },
+  "rnpm": {
+    "assets": [
+      "./src/npmassets/fonts"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
