--- a/ios/reactNativeBasic/Info.plist
+++ b/ios/reactNativeBasic/Info.plist
@@ -57,6 +57,7 @@
 		<string>Nunito-Bold.ttf</string>
 		<string>Nunito-Italic.ttf</string>
 		<string>Nunito-Regular.ttf</string>
+		<string>Nunito-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
